Fixed the margins sticking out

--- a/static/css/bootstrap-theme.css
+++ b/static/css/bootstrap-theme.css
@@ -66,6 +66,10 @@ p {
   letter-spacing: 0.05em;
 }
 
+.cyan {
+  color: #00bccc;
+}
+
 /* Navbar */
 
 .navbar {
